[gd_scene load_steps=16 format=3 uid="uid://c74q4gpxfvsd8"]

[ext_resource type="Script" uid="uid://cttsybyfd5yxr" path="res://sceans/scean/ranking.gd" id="1_pf6hk"]
[ext_resource type="Script" uid="uid://d4f3n3fnf1r8u" path="res://sceans/gdscript/menu_tab.gd" id="2_3i72e"]
[ext_resource type="Texture2D" uid="uid://dmh2bo5l2ewyt" path="res://assets/filterbutton.png" id="2_tpykr"]
[ext_resource type="Texture2D" uid="uid://omslv2lrf6h7" path="res://assets/filterbutton_hover.png" id="3_lddyq"]
[ext_resource type="Texture2D" uid="uid://cvd3k6rjyyw35" path="res://assets/ui_tema/pannel/pannel2.png" id="4_32ijq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3i72e"]
texture = ExtResource("4_32ijq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_32ijq"]
texture = ExtResource("4_32ijq")

[sub_resource type="Animation" id="Animation_tpykr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/filter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(90, 71)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/filter:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/delete_chek:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_u25ft"]
resource_name = "delete_check_off"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/delete_chek:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.378929, 2.92818),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fqr6g"]
resource_name = "delete_check_on"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/delete_chek:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.406126, 2.14355),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mm8ac"]
resource_name = "filter_setting_off"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/filter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.435275, 2.54912),
"update": 0,
"values": [Vector2(99, 76), Vector2(99, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/filter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.68302, 1.93187),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.121569)]
}

[sub_resource type="Animation" id="Animation_3i72e"]
resource_name = "filter_setting_on"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/filter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.329877, 2.07053),
"update": 0,
"values": [Vector2(99, 600), Vector2(99, 76)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/filter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.353554, 2.82843),
"update": 0,
"values": [Color(1, 1, 1, 0.121569), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lddyq"]
resource_name = "ranking_off"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(0.466517, 1, 2.14355),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.01), Vector2(0.01, 0.01)]
}

[sub_resource type="Animation" id="Animation_mx50r"]
resource_name = "ranking_on"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(0.466517, 1, 2.14355),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(1, 0.01), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32ijq"]
_data = {
&"RESET": SubResource("Animation_tpykr"),
&"delete_check_off": SubResource("Animation_u25ft"),
&"delete_check_on": SubResource("Animation_fqr6g"),
&"filter_setting_off": SubResource("Animation_mm8ac"),
&"filter_setting_on": SubResource("Animation_3i72e"),
&"ranking_off": SubResource("Animation_lddyq"),
&"ranking_on": SubResource("Animation_mx50r")
}

[node name="Ranking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(566, 331)
script = ExtResource("1_pf6hk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -281.0
offset_right = 462.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -264.0
offset_right = 137.0
offset_bottom = -212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "ランキング"

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 77.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
script = ExtResource("2_3i72e")
metadata/_custom_type_script = "uid://d4f3n3fnf1r8u"

[node name="11x11" type="ScrollContainer" parent="Panel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/11x11"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="21x21" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/21x21"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="31x31" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/31x31"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="41x41" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/41x41"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="85x85" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/85x85"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="開発者特権" type="Control" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="export" type="Button" parent="Panel/TabContainer/開発者特権"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -126.0
offset_right = 104.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "エクスポート"

[node name="load" type="Button" parent="Panel/TabContainer/開発者特権"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -41.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "ロード"

[node name="clear" type="Button" parent="Panel/TabContainer/開発者特権"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = 49.0
offset_right = 107.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "クリア"

[node name="back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 224.0
offset_right = 70.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "もどる"

[node name="FilterButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 738.0
offset_top = 27.0
offset_right = 801.0
offset_bottom = 83.0
texture_normal = ExtResource("2_tpykr")
texture_hover = ExtResource("3_lddyq")
ignore_texture_size = true
stretch_mode = 0

[node name="filter" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -210.0
offset_right = 354.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3i72e")

[node name="Label" type="Label" parent="Panel/filter"]
layout_mode = 0
offset_left = 275.0
offset_top = 25.0
offset_right = 435.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 32
text = "フィルター"

[node name="GridContainer" type="GridContainer" parent="Panel/filter"]
layout_mode = 0
offset_left = 92.0
offset_top = 111.0
offset_right = 625.0
offset_bottom = 350.0
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 50
columns = 2

[node name="ItemOn" type="CheckBox" parent="Panel/filter/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "アイテムON"

[node name="ItemOff" type="CheckBox" parent="Panel/filter/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "アイテムOFF"

[node name="TrapOn" type="CheckBox" parent="Panel/filter/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "トラップON"

[node name="TrapOff" type="CheckBox" parent="Panel/filter/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "トラップOFF
"

[node name="DarkOn" type="CheckBox" parent="Panel/filter/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "暗闇ON
"

[node name="DarkOff" type="CheckBox" parent="Panel/filter/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "暗闇OFF"

[node name="back" type="Button" parent="Panel/filter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = 149.5
offset_right = 59.0
offset_bottom = 190.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "もどる"

[node name="name_filter_label" type="Label" parent="Panel/filter"]
layout_mode = 0
offset_left = 80.0
offset_top = 316.0
offset_right = 255.0
offset_bottom = 349.0
theme_override_font_sizes/font_size = 25
text = "名前フィルター"

[node name="name_filter" type="LineEdit" parent="Panel/filter"]
layout_mode = 0
offset_left = 87.0
offset_top = 354.0
offset_right = 265.0
offset_bottom = 386.0
max_length = 10

[node name="delete_chek" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -83.5
offset_right = 217.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(217.5, 87.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_32ijq")

[node name="Label" type="Label" parent="Panel/delete_chek"]
layout_mode = 0
offset_left = 58.0
offset_top = 17.5
offset_right = 394.0
offset_bottom = 86.5
theme_override_font_sizes/font_size = 32
text = "データを削除します
本当によろしいですか"
horizontal_alignment = 1

[node name="no_player" type="Label" parent="Panel/delete_chek"]
visible = false
layout_mode = 0
offset_left = 53.5
offset_top = 12.5
offset_right = 391.5
offset_bottom = 93.5
theme_override_font_sizes/font_size = 25
text = "名前が設定されていない場合
ランキングに乗りません
よろしいですか？"
horizontal_alignment = 1

[node name="delete" type="Button" parent="Panel/delete_chek"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.5
offset_top = 17.0
offset_right = 164.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "消す"

[node name="back" type="Button" parent="Panel/delete_chek"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = 17.0
offset_right = -14.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "もどる"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_32ijq")
}

[node name="FileDialog" type="FileDialog" parent="."]

[node name="LoadFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1

[connection signal="pressed" from="Panel/TabContainer/開発者特権/export" to="." method="save_json_dialog"]
[connection signal="pressed" from="Panel/TabContainer/開発者特権/load" to="." method="load_json_dialog"]
[connection signal="pressed" from="Panel/TabContainer/開発者特権/clear" to="." method="_on_clear_on_pressed"]
[connection signal="pressed" from="Panel/back" to="." method="hide_ranking"]
[connection signal="pressed" from="Panel/FilterButton" to="." method="_on_filter_button_pressed"]
[connection signal="pressed" from="Panel/filter/back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="Panel/filter/name_filter" to="." method="_on_name_filter_text_changed"]
[connection signal="pressed" from="Panel/delete_chek/delete" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Panel/delete_chek/back" to="." method="_on_back_delete_pressed"]
[connection signal="file_selected" from="LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
